auth session added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <title>NSBM EVENTS</title>
     <script>
-        window.location.replace("./www/pages/index.php");
+        window.location.replace("./NSBMEvents/pages/index.php");
     </script>
 </head>
 <body>
